...
                        <viewControllerLayoutGuide type="bottom" id="Quc-n3-ghc"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="AD9-fP-BNz">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Some Example Text" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vvs-pw-cO1">
                                <rect key="frame" x="24" y="68" width="327" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="hBM-ki-otA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G9g-Gu-nDv">
                                <rect key="frame" x="60" y="106" width="255" height="30"/>
                                <state key="normal" title="Send Data To Beta Module Via Segue">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="didClickSendDataButton:" destination="iSd-mR-aP9" eventType="touchUpInside" id="hZC-x9-OvQ"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="centerY" secondItem="26x-KN-ORF" secondAttribute="centerY" id="KPJ-c4-cZn"/>
                                    <constraint firstAttribute="centerX" secondItem="26x-KN-ORF" secondAttribute="centerX" id="oGU-QZ-89o"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="raS-6e-eOm">
                                <rect key="frame" x="32.5" y="152" width="310" height="30"/>
                                <state key="normal" title="Instantiate Beta With Factory And Storyboard">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="didClickInstantiateBetaButton:" destination="iSd-mR-aP9" eventType="touchUpInside" id="8XC-EK-RA0"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udu-TD-T2W">
                                <rect key="frame" x="87.5" y="396" width="200" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="5zd-N7-Hea"/>
                                    <constraint firstAttribute="height" constant="30" id="yTf-Tf-xp4"/>
                                </constraints>
                                <state key="normal" title="Back with animation"/>
                                <connections>
                                    <action selector="goBackAnimated:" destination="k9d-kH-ibe" eventType="touchUpInside" id="CVP-KI-vhQ"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Szk-3u-tA7">
                                <rect key="frame" x="147" y="318.5" width="81" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="81" id="IqW-QJ-7MY"/>
                                    <constraint firstAttribute="height" constant="30" id="W9m-20-x1Z"/>
                                </constraints>
                                <state key="normal" title="Show"/>
                                <connections>
                                    <action selector="show:" destination="ZC1-U3-TYt" eventType="touchUpInside" id="L4y-zU-wEX"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Owc-YR-yi1">
                                <rect key="frame" x="74.5" y="376" width="226" height="30"/>
...
                            <constraint firstItem="Owc-YR-yi1" firstAttribute="centerX" secondItem="rhh-ha-ysc" secondAttribute="centerX" id="7ge-00-bQs"/>
                            <constraint firstItem="Owc-YR-yi1" firstAttribute="top" secondItem="Szk-3u-tA7" secondAttribute="bottom" constant="27.5" id="YcE-pc-MY5"/>
                            <constraint firstItem="Szk-3u-tA7" firstAttribute="centerX" secondItem="rhh-ha-ysc" secondAttribute="centerX" id="aAq-WL-3WK"/>
                            <constraint firstItem="Szk-3u-tA7" firstAttribute="centerY" secondItem="rhh-ha-ysc" secondAttribute="centerY" id="lD9-uj-6m4"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Swift Only" id="kRf-I0-g8b"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CPs-Wa-0KP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-586.39999999999998" y="-607.64617691154433"/>
        </scene>
        <!--Tab Bar Controller-->
...
            <point key="canvasLocation" x="-1554" y="-564"/>
        </scene>
        <!--ObjC+Swift-->
        <scene sceneID="rme-v3-l1z">
            <objects>
                <navigationController id="Xfk-px-I3u" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="ObjC+Swift" id="Cjl-Ec-hHa"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="AMb-g8-K36">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="iSd-mR-aP9" kind="relationship" relationship="rootViewController" id="oSw-TU-VRf"/>
...
